fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 a {
     padding-left: 8px !important;
-    padding-top: 20px;
+    padding-top: 32px;
     font-size: 32px;
 }
 
@@ -20,7 +20,7 @@ a {
     font-size: 32px;
     margin-right: 16px;
     margin-top: 24px;
-    margin-bottom: 24px;
+    margin-bottom: 28px;
     padding-top: 248px;
 }
 
@@ -61,7 +61,7 @@ a {
     border: none;
     color: white;
     text-align: center !important;
-    width: 740px;
+    width: 800px;
     height: 600px;
     text-decoration: none;
     display: inline-block;
